[gd_scene load_steps=4 format=3 uid="uid://byje7lca6mloh"]

[ext_resource type="Script" uid="uid://dmle8rpb013hv" path="res://scenes/start_screen/start_screen.gd" id="1_pvrqi"]
[ext_resource type="PackedScene" uid="uid://ceupt74uc3cms" path="res://scenes/settings/settings_menu.tscn" id="2_wsdqa"]
[ext_resource type="PackedScene" uid="uid://ffu647kk3fmo" path="res://scenes/debug/debug_overlay.tscn" id="3_wsdqa"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvrqi")

[node name="DebugOverlay" parent="." instance=ExtResource("3_wsdqa")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -33.0
offset_right = 48.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="SettingsMenu" parent="." instance=ExtResource("2_wsdqa")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
